--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,3 @@
 ul
-  each val in ['Đi chợ','Nấu cơm','Rửa bát','Học code tại CodersX',]
-    li= val;
+  each val in ['Đi chợ','Nấu cơm','Rửa bát','Học code tại CodersX']
+    li= val
