--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,6 @@
 ul
   each val in ['Đi chợ','Nấu cơm','Rửa bát','Học code tại CodersX']
     li= val
+    
+ if ('nấu' in val )
+    console.log(li= val);
