🏓🍠 Checkpoint ./server.js:17880600/346 ./views/users/create.pug:17880600/40

--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -1,5 +1,8 @@
-h1 Create
+h1 Create User
+
 form(action="/todos/create", method="POST")
   label Name 
-  input(type="text", name= "name")
+  
+  input(type="text", name= "todo")
+  
   button Create
