--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -1,6 +1,6 @@
 h1 Create User
 
-form(action="/users/create", method="POST")
+form(action="/todos/create", method="POST")
   label Name 
   
   input(type="text", name= "todo")
