--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,8 @@
+h1 Todos List
+
+form(action="/todos/create")
+  button New
+
 form(action="/todos/search", method="GET")
   input(type="text", name= "q")
   button Search
