--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,7 @@ form(action="/todos/search", method="GET")
   input(type="text", name= "q")
   button Search
   
-
+ul
+  each todo in todos
+    li= todo
     
