--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -3,6 +3,6 @@ h1 Create User
 form(action="/todos/create", method="POST")
   label Name 
   
-  input(type="text", name= "todo")
+  input(type="text", name= "todos")
   
   button Create
