--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,3 +1,12 @@
+h1 Todos List
+
+form(action="/todos/create")
+  button New
+
+form(action="/todos/search", method="GET")
+  input(type="text", name= "q")
+  button Search
+  
 ul 
   each todo in todos 
-    li= todo.name
+    li= todo.user
