🏠📉 Checkpoint ./views/users/create.pug:17880600/28 ./views/users/index.pug:17880600/494 ./db.json:17880600/22 ./server.js:17880600/22

--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -3,6 +3,7 @@ h1 Create User
 form(action="/todos/create", method="POST")
   label Name 
   
-  input(type="text", name= "todos")
+  input(type="text", name= "user")
   
   button Create
+  
