--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -2,7 +2,7 @@ h1 Create User
 
 form(action="/todos/create", method="POST")
   label Name
-  input(type="text", name= "user")
+  input(type="text", name= "text")
   
   button Create
   
