--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -4,7 +4,7 @@ form(action="/todos/create")
   button New
 
 form(action="/todos/search", method="GET")
-  input(type="text", name= "user")
+  input(type="text", name= "q")
   button Search
 
 ul 
