--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -3,11 +3,11 @@ h1 Todos List
 form(action="/todos/create")
   button New
 
-form(action="/todos/search", method="GET")
+form(action="/todos", method="GET")
   input(type="text", name= "q")
   button Search
 
-
+ul
   each todo in todos 
     li= todo.text
     
