--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -3,9 +3,9 @@ h1 Todos List
 form(action="/todos/create")
   button New
 
-form(action="/todos", method="GET")
+form(action="/todos/search", method="GET")
   input(type="text", name= "q")
-  button Search
+  button(type= "submit") Search
 
 ul
   each todo in todos 
