--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -13,7 +13,7 @@ ul
       span= todo.text
       //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/todos' + todo.id) View
+      a(href='/todos/' + todo.id) View
       
       
     
