🍪💍 Checkpoint ./views/users/view.pug:17880600/339 ./views/users/index.pug:17880600/34 ./server.js:17880600/73

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -9,8 +9,7 @@ form(action="/todos/search", method="GET")
 
 ul
   each todo in todos 
-    li 
-      span= todo.text
+    li= todo.text
       //TẠO KHOẢN CÁCH
       span &nbsp; 
       a(href='/todos/' + todo.id) View
