🌵💫 Checkpoint ./server.js:17880600/78 ./views/users/index.pug:17880600/12 ./views/users/view.pug:17880600/12

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -9,7 +9,8 @@ form(action="/todos/search", method="GET")
 
 ul
   each todo in todos 
-    li= todo.text
+    li 
+      span= todo.text
       //TẠO KHOẢN CÁCH
       span &nbsp; 
       a(href='/todos/' + todo.id) View
