🏓💑 Checkpoint ./server.js:17880600/466 ./db.json:17880600/302 ./views/users/create.pug:17880600/44 ./views/users/index.pug:17880600/134 ./views/users/view.pug:17880600/45

--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -1,8 +1,10 @@
 h1 Create User
 
-form(action="/todos/create", method="POST")
-  label Name
-  input(type="text", name= "text")
+form(action="/route/create", method="POST")
+
+  label Book Name
+  
+  input(type="text", name= "title")
   
   button Create
   
