--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,19 +1,21 @@
-h1 Todos List
+h1 Book List
 
-form(action="/todos/create")
+form(action="/route/create")
   button New
 
-form(action="/todos/search", method="GET")
+form(action="/route/search", method="GET")
+
   input(type="text", name= "q")
+  
   button(type= "submit") Search
 
 ul
-  each todo in todos 
+  each book in books
     li 
-      span= todo.text
+      span= book.description
       //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/todos/' + todo.id) View
+      a(href='/route/' + book.title) View
       
       
     
