📍🚐 Checkpoint ./views/users/view.pug:17880600/36 ./views/users/create.pug:17880600/254 ./server.js:17880600/10 ./views/users/index.pug:17880600/32

--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -2,9 +2,16 @@ h1 Create User
 
 form(action="/route/create", method="POST")
 
-  label Book Name
+  label Title: 
   
-  input(type="text", name= "title")
+  p 
+    input(type="text", name= "title")
   
-  button Create
+  label Description: 
+  
+  p
+    input(type="text", name= "description")
+  
+  p 
+    button Create
   
