🌻👬 Checkpoint ./server.js:17880600/290 ./views/users/index.pug:17880600/258 ./views/users/view.pug:17880600/208

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -14,8 +14,9 @@ ul
     li 
       span= book.title
       //TẠO KHOẢN CÁCH
+
       span &nbsp; 
-      a(href='/route/' + book.description) Edit
+      a(href='/route/' + book.id) Edit
       
       
     
