--- a/views/users/search.pug
+++ b/views/users/search.pug
@@ -1,5 +1,9 @@
+h1 Search Title
+
 form(action="/route/search", method="GET")
 
   input(type="text", name= "q")
   
   button(type= "submit") Search
+  
+  
