🏜👣 Checkpoint ./server.js:17880600/68 ./views/users/view.pug:17880600/526 ./views/users/index.pug:17880600/117

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -20,6 +20,8 @@ ul
       span= book.title
       //TẠO KHOẢN CÁCH
       span &nbsp; 
+      a(href='/route/update/' + book.id) Update
+      span &nbsp; 
       a(href='/route/' + book.id) Delete
       
       
