--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -3,10 +3,6 @@ h1 Book List
 form(action="/route/create")
 
   button Add Title
-  
-form(action="/route/update")
-
-  button Update Title
 
 form(action="/route/search", method="GET")
 
@@ -20,9 +16,9 @@ ul
       span= book.title
       //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/route/update/' + book.id) Update
+      a(href='/route/update/' + book.title) Update
       span &nbsp; 
-      a(href='/route/' + book.id) Delete
+      a(href='/route/delte/' + book.id) Delete
       
       
     
