🎆👨 Checkpoint ./server.js:17880600/84 ./views/users/update.pug:17880600/465

--- a/views/users/update.pug
+++ b/views/users/update.pug
@@ -1,5 +1,12 @@
 h1 Books
 
-span= newtitle.title
+form(action="/route/create", method="POST")
+
+  label Title: 
+  
+  p 
+    input(type="text", name= "title")
+    
+  button Edit
 
       
