🎤🐩 Checkpoint ./server.js:17880600/403 ./views/users/index.pug:17880600/27 ./db.json:17880600/207 ./views/users/update.pug:17880600/12

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -16,9 +16,9 @@ ul
       span= book.title
       //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/route/update/' + book.title) Update
+      a(href='/route/update/' + book.id) Update
       span &nbsp; 
-      a(href='/route/delte/' + book.id) Delete
+      a(href='/route/' + book.id) Delete
       
       
     
