--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -12,8 +12,13 @@ form(action="/route/search", method="GET")
 
 ul
   each book in books
-    li 
-      span= book.title
+    li
+      p Title:
+      span &nbsp; 
+        span= book.title
+      p Description:
+        span &nbsp;
+        span= book.description
       //TẠO KHOẢN CÁCH
       span &nbsp; 
       a(href='/route/update/' + book.id) Update
