--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -14,10 +14,10 @@ ul
   each book in books
     li
       p Title:
-      span &nbsp; 
+        span &nbsp
         span= book.title
       p Description:
-        span &nbsp;
+        span &nbsp
         span= book.description
       //TẠO KHOẢN CÁCH
       span &nbsp; 
