👔🛥 Checkpoint ./server.js:17880600/295 ./views/users/update.pug:17880600/38 ./views/users/index.pug:17880600/27 ./db.json:17880600/10

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -23,7 +23,7 @@ ul
       span &nbsp; 
       a(href='/route/update/' + book.id) Update
       span &nbsp; 
-      a(href='/route/' + book.id) Delete
+      a(href='/route/delete/' + book.id) Delete
       
       
     
