--- a/views/users/update.pug
+++ b/views/users/update.pug
@@ -5,7 +5,7 @@ form(action="/route/update/:id", method="POST")
   label Title: 
   
   p 
-    input(type="text", name= "title")
+    input(type="text", name= "title" value=title)
     
   button Edit
 
