🚇💳 Checkpoint ./views/users/update.pug:17880600/32 ./server.js:17880600/180

--- a/views/users/update.pug
+++ b/views/users/update.pug
@@ -1,12 +1,12 @@
 h1 Books
 
-form(action="/route/update/:id", method="POST")
+form(action="", method="POST")
 
   label Title: 
   
   p 
     input(type="text", name= "title" value=title)
     
-  button Edit
+  button(type="submit") Edit
 
       
