🍤👂 Checkpoint ./server.js:17880600/176 ./routes/users/crudu.js:17880600/760 ./views/books/index.pug:17880600/34 ./views/user/create.pug:17880600/9 ./views/user/index.pug:17880600/2 ./routes/user.route.js:17880600/2

--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -1,10 +1,10 @@
 h1 Book List
 
-form(action="/user/create")
+form(action="/users/create")
 
   button Add Title
 
-form(action="/user/search", method="GET")
+form(action="/users/search", method="GET")
 
   input(type="text", name= "q")
     
