--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -1,10 +1,10 @@
 h1 Book List
 
-form(action="/users/create")
+form(action="/user/create")
 
   button Add Title
 
-form(action="/users/search", method="GET")
+form(action="/user/search", method="GET")
 
   input(type="text", name= "q")
     
