😂📡 Checkpoint ./views/user/create.pug:17880600/37 ./views/user/index.pug:17880600/392 ./server.js:17880600/87 ./routes/user.route.js:17880600/5

--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -1,6 +1,6 @@
 h1 Create User
 
-form(action="/users/create", method="POST")
+form(action="/route/users/create", method="POST")
 
   label User Name: 
   
@@ -8,4 +8,4 @@ form(action="/users/create", method="POST")
     input(type="text", name= "name")
   
   p 
-    button Create
+    button(type="submit") Create
