🏖🚒 Checkpoint ./server.js:17880600/8 ./routes/user.route.js:17880600/874 ./db.json:17880600/5 ./views/user/index.pug:17880600/6

--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -4,7 +4,7 @@ form(action="/route/users/create")
 
   button Add User
 
-form(action="/users/search", method="GET")
+form(action="/route/users/search", method="GET")
 
   input(type="text", name= "q")
     
