🍯🍰 Checkpoint ./server.js:17880600/6 ./views/books/index.pug:17880600/24 ./views/user/index.pug:17880600/26 ./views/user/create.pug:17880600/6 ./routes/user.route.js:17880600/18

--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -1,6 +1,6 @@
 h1 Users List
 
-form(action="/route/users/create")
+form(action="/users/create")
 
   button Add User
   
@@ -8,7 +8,7 @@ form(action="/route")
 
   button Back
 
-form(action="/route/users/search", method="GET")
+form(action="/users/search", method="GET")
 
   input(type="text", name= "q")
     
@@ -22,6 +22,6 @@ ul
         span= user.name
         //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/route/users/update/' + user.id) Update
+      a(href='/users/update/' + user.id) Update
       span &nbsp; 
-      a(href='/route/users/delete/' + user.id) Delete
+      a(href='/users/delete/' + user.id) Delete
