--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -1,6 +1,6 @@
 h1 Create User
 
-form(action="/route/users/create", method="POST")
+form(action="/users/create", method="POST")
 
   label User Name: 
   
