--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -1,3 +1,9 @@
+h1 Transactions Libary
+
+form(action="/transactions/login", method="GET")
+
+  button View
+
 h1 Login User
 
 form(action="/users/login", method="GET")
@@ -30,6 +36,7 @@ ul
       a(href='/route/update/' + book.id) Update
       span &nbsp; 
       a(href='/route/delete/' + book.id) Delete
-      
+
+
       
     
