--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -1,3 +1,9 @@
+style.
+  table, tr, th, td {
+    border: 1px solid black;
+    }
+  
+
 h1 Transactions Libary
 
 form(action="/transactions/create")
