🚨🗽 Checkpoint ./views/transactions/index.pug:17880600/364 ./routes/transaction.route.js:17880600/432

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -32,10 +32,16 @@ form(action="/transactions/search", method="GET")
       span &nbsp; 
       a(href='/transactions/delete/' + transaction.id) Delete
       
-table(style='width:100%')
+table
   tr
-    th Selecte
-    th Option
+    th UserID
+    th BookID
   tr 
-    td transaction.userid
-    td transaction.bookid
+    td
+      ul
+        each user in users
+          li= user.name
+    td
+      ul
+        each book in books
+          li= book.title
