👓🛥 Checkpoint ./routes/user.route.js:17880600/37 ./routes/book.route.js:17880600/101 ./views/books/index.pug:17880600/28 ./db.json:17880600/56 ./views/user/index.pug:17880600/24 ./routes/transaction.route.js:17880600/128 ./views/transactions/index.pug:17880600/483

--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -33,9 +33,9 @@ ul
         span= book.description
       //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/route/update/' + book.id) Update
+      a(href='/route/update/' + book.bookId) Update
       span &nbsp; 
-      a(href='/route/delete/' + book.id) Delete
+      a(href='/route/delete/' + book.bookId) Delete
 
 
       
