--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -22,6 +22,6 @@ ul
         span= user.name
         //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/users/update/' + user.id) Update
+      a(href='/users/update/' + user.userID) Update
       span &nbsp; 
-      a(href='/users/delete/' + user.id) Delete
+      a(href='/users/delete/' + user.userID) Delete
