🚄🌁 Checkpoint ./routes/transaction.route.js:17880600/185 ./db.json:17880600/35 ./views/transactions/index.pug:17880600/22

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -46,6 +46,6 @@ table
   each transaction in transactions
     tr
       td= transaction.transactionID
-      td= transaction.users
-      td= transaction.books
+      td= transaction.user
+      td= transaction.book
     
