🐜🌪 Checkpoint ./routes/transaction.route.js:17880600/238 ./views/transactions/index.pug:17880600/32

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -24,14 +24,14 @@ body
     span &nbsp
     select(name='user')
       each user in users
-        option(value= user.userID) #{user.name}
+        option(value= user.userId) #{user.name}
       span &nbsp  
 
     label Books:
     span &nbsp
     select(name='book')
       each book in books
-        option(value= book.bookID) #{book.title}  
+        option(value= book.bookId) #{book.title}  
       span &nbsp
     button Add
 
