🎲❤️ Checkpoint ./routes/transaction.route.js:17880600/508 ./db.json:17880600/6 ./views/transactions/index.pug:17880600/6 ./views/transactions/search.pug:17880600/171

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -39,6 +39,6 @@ body
     each transaction in transactions
       tr
         td= transaction.transactionId
-        td= transaction.user
-        td= transaction.book
+        td= transaction.userId
+        td= transaction.bookId
     
