💪💧 Checkpoint ./views/transactions/search.pug:17880600/759 ./routes/transaction.route.js:17880600/261

--- a/views/transactions/search.pug
+++ b/views/transactions/search.pug
@@ -1,9 +1,17 @@
-ul
-  each trans in books
-    li
-      p Title:
-        span &nbsp
-        span= book.title
-      p Description:
-        span &nbsp
-        span= book.description
+style.
+  table, tr, th, td {
+    border: 1px solid black;
+    }
+body
+  h1 Search
+
+    table(style='width:100%')
+      tr
+        th ID
+        th User
+        th Book
+      each transaction in transactions
+        tr
+          td= transaction.transactionId
+          td= transaction.userId
+          td= transaction.bookId
