🎏✍️ Checkpoint ./routes/transaction.route.js:17880600/71 ./views/transactions/search.pug:17880600/78 ./views/transactions/index.pug:17880600/3

--- a/views/transactions/search.pug
+++ b/views/transactions/search.pug
@@ -15,3 +15,7 @@ body
           td= transaction.transactionId
           td= transaction.userId
           td= transaction.bookId
+    
+    form(action="/transaction/view")
+
+      button Back
