--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -13,7 +13,7 @@ body
 
     input(type="text", name= "q")
 
-    button Search     
+    button Search ID     
 
   form(action="/transaction/create", method="POST")
     label Users:
