🐣🎐 Checkpoint ./views/user/index.pug:17880600/4

--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -22,6 +22,6 @@ ul
         span= user.name
         //TẠO KHOẢN CÁCH
       span &nbsp; 
-      a(href='/users/update/' + user.userID) Update
+      a(href='/users/update/' + user.userId) Update
       span &nbsp; 
-      a(href='/users/delete/' + user.userID) Delete
+      a(href='/users/delete/' + user.userId) Delete
