⛳️📉 Checkpoint ./views/transactions/index.pug:17880600/703 ./controllers/user.controller.js:17880600/68

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -36,9 +36,13 @@ body
       th ID
       th User
       th Book
+      th Logout
     each transaction in transactions
       tr
-        td= transaction.transactionId
-        td= transaction.userId
+        td= transaction.transactionId       
+        td= transaction.userId 
         td= transaction.bookId
+        td
+          form(action="/transaction/done", method="GET") 
+            button Done
     
