🏅🎸 Checkpoint ./controllers/user.controller.js:17880600/117 ./controllers/transaction.controller.js:17880600/604 ./views/transactions/index.pug:17880600/211 ./routes/transaction.route.js:17880600/74

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -44,5 +44,5 @@ body
         td= transaction.bookId
         td
           form(action="/transaction/done", method="GET") 
-            button Done
+            button(type="submit", name= "isComplete") Done
     
