🐺⛑ Checkpoint ./routes/transaction.route.js:17880600/162 ./controllers/user.controller.js:17880600/3 ./controllers/transaction.controller.js:17880600/445 ./views/transactions/complete.pug:17880600/110

--- a/views/transactions/complete.pug
+++ b/views/transactions/complete.pug
@@ -3,7 +3,7 @@ style.
     border: 1px solid black;
     }
 body
-  h1 Search
+  h1 Logout Books
 
     table(style='width:100%')
       tr
@@ -16,4 +16,4 @@ body
           td= transaction.transactionId
           td= transaction.userId
           td= transaction.bookId
-          td= 
+          td= transaction.done
