🍧🌥 Checkpoint ./controllers/transaction.controller.js:17880600/554 ./views/transactions/index.pug:17880600/26

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -42,7 +42,7 @@ body
         td= transaction.transactionId       
         td= transaction.userId 
         td= transaction.bookId
-        td
+        td= transaction.done
           form(action="/transaction/done", method="GET") 
             button(type="submit", name= "isComplete") Done
     
