🎸🗃 Checkpoint ./views/transactions/index.pug:17880600/303 ./routes/transaction.route.js:17880600/158 ./controllers/transaction.controller.js:17880600/83

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -42,7 +42,6 @@ body
         td= transaction.transactionId       
         td= transaction.userId 
         td= transaction.bookId
-        td= transaction.done
-          form(action="/transaction/done", method="GET") 
-            button(type="submit", name= "isComplete") Done
+        td Mua
+          a(href='/transaction/complete/' + transaction.transactionId) Done
     
