🎢🚗 Checkpoint ./controllers/transaction.controller.js:17880600/406 ./db.json:17880600/5 ./views/transactions/index.pug:17880600/243 ./routes/transaction.route.js:17880600/18

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -42,6 +42,10 @@ body
         td= transaction.transactionId       
         td= transaction.userId 
         td= transaction.bookId
-        td 
+        td
+          if transaction.isComplete
+            a(href="#") True
+          else
+            a(href="/transaction/complete/" +  transaction.isComplete ) False
           
     
