🌒💝 Checkpoint ./controllers/transaction.controller.js:17880600/263 ./views/transactions/index.pug:17880600/83 ./routes/transaction.route.js:17880600/13

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -46,6 +46,6 @@ body
           if transaction.isComplete
             a(href="#") True
           else
-            a(href="/transaction/complete/" +  transaction.isComplete ) False
+            a(href="/transaction/"+  transaction.transactionId + "/complete" ) False
           
     
