💕🎣 Checkpoint ./layouts/common.pug:17880600/794 ./views/books/index.pug:17880600/309 ./views/books/create.pug:17880600/115 ./views/books/update.pug:17880600/75 ./views/transactions/index.pug:17880600/561 ./views/transactions/search.pug:17880600/281 ./views/user/index.pug:17880600/222

--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -1,41 +1,44 @@
-h1 Transactions Libary
+extends ../layouts/common.pug
 
-form(action="/transaction/view")
+block content
+  h1 Transactions Libary
 
-  button View
+  form(action="/transaction/view")
 
-h1 Login User
+    button View
 
-form(action="/users/login", method="GET")
+  h1 Login User
 
-  button Login
+  form(action="/users/login", method="GET")
 
-h1 Book List
+    button Login
 
-form(action="/route/create")
+  h1 Book List
 
-  button Add Title
+  form(action="/route/create")
 
-form(action="/route/search", method="GET")
+    button Add Title
 
-  input(type="text", name= "q")
-    
-  button Search
+  form(action="/route/search", method="GET")
 
-ul
-  each book in books
-    li
-      p Title:
-        span &nbsp
-        span= book.title
-      p Description:
-        span &nbsp
-        span= book.description
-      //TẠO KHOẢN CÁCH
-      span &nbsp; 
-      a(href='/route/update/' + book.bookId) Update
-      span &nbsp; 
-      a(href='/route/delete/' + book.bookId) Delete
+    input(type="text", name= "q")
+
+    button Search
+
+  ul
+    each book in books
+      li
+        p Title:
+          span &nbsp
+          span= book.title
+        p Description:
+          span &nbsp
+          span= book.description
+        //TẠO KHOẢN CÁCH
+        span &nbsp; 
+        a(href='/route/update/' + book.bookId) Update
+        span &nbsp; 
+        a(href='/route/delete/' + book.bookId) Delete
 
 
       
