👋🍖 Checkpoint ./views/books/index.pug:17880600/16 ./layouts/common.pug:17880600/318 ./views/books/create.pug:17880600/44 ./views/books/update.pug:17880600/44 ./views/transactions/index.pug:17880600/357 ./views/transactions/search.pug:17880600/469 ./views/user/create.pug:17880600/91 ./views/user/index.pug:17880600/45 ./views/user/update.pug:17880600/91

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -1,9 +1,7 @@
+extends ../../layouts/common
 
-  style.
-    table, tr, th, td {
-      border: 1px solid black;
-      }
-  body
+block content
+
     h1 Transactions Libary
 
     form(action="/route")
