--- a/views/transactions/search.pug
+++ b/views/transactions/search.pug
@@ -1,11 +1,9 @@
+extends ../../layouts/common
 
-  style.
-    table, tr, th, td {
-      border: 1px solid black;
-      }
-  body
+block content
+
     h1 Search
-
+    
       table(style='width:100%')
         tr
           th ID
