--- a/views/user/update.pug
+++ b/views/user/update.pug
@@ -1,10 +1,14 @@
-h1 Users Update
+extends ../../layouts/common
 
-form(action="", method="POST")
+block content
 
-  label Name: 
-  
-  p 
-    input(type="text", name= "name" value=name)
-    
-  button(type="submit") Edit
+  h1 Users Update
+
+  form(action="", method="POST")
+
+    label Name: 
+
+    p 
+      input(type="text", name= "name" value=name)
+
+    button(type="submit") Edit
