--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -1,6 +1,7 @@
-extends ../layouts/common.pug
+extends ../../layouts/common
 
 block content
+
   h1 Transactions Libary
 
   form(action="/transaction/view")
