💇🍎 Checkpoint ./views/transactions/index.pug:17880600/443 ./views/transactions/search.pug:17880600/40 ./views/books/update.pug:17880600/55 ./views/books/index.pug:17880600/226 ./views/books/create.pug:17880600/40 ./views/user/create.pug:17880600/55 ./views/user/index.pug:17880600/80 ./views/user/update.pug:17880600/55

--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -17,4 +17,4 @@ block content
       input(type="text", name= "description")
 
     p 
-      button Create
+      button(type="submit", class="btn btn-primary") Create
