--- a/views/transactions/search.pug
+++ b/views/transactions/search.pug
@@ -17,4 +17,4 @@ block content
 
       form(action="/transaction/view")
 
-        button Back
+        button(type="submit", class="btn btn-primary") Back
