--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -12,4 +12,4 @@ block content
       input(type="text", name= "name")
 
     p 
-      button(type="submit") Create
+      button(type="submit", class="btn btn-primary") Create
